Scaffold Order/OrderDetails, Models Associations, some changes on the style

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -16,7 +16,7 @@ html, body {
 
 /*C O N T A I N E R*/
 body{
-    font-family: 'Balsamiq Sans', cursive;
+    font-family: 'Abhaya Libre', serif;
     color: white;
     background-image: url("../images/pattern_extended.png");
     background-repeat: repeat;
