--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,7 +18,8 @@ html, body {
 body{
     font-family: 'Abhaya Libre', serif;
     color: white;
-    background-image: url("../images/pattern_extended.png");
+    /* background-image: url("../images/pattern_extended.png"); */
+    background: linear-gradient(to right, #c04848, #480048);
     background-repeat: repeat;
     background-attachment: fixed;
 }
@@ -64,7 +65,9 @@ body{
     animation: spin 0.5s linear 0s 1 ;
 }
 
-
+.container{
+    min-height: calc(100vh - 70px);
+}
 /*CONTENT*/
 #content{
     margin-top: 2% ;
@@ -221,8 +224,12 @@ input[type=number]::-webkit-outer-spin-button {
     backdrop-filter: blur(10px);
     border-radius: 30px;
     margin: 2vh;
+    padding-top: 2vh;
     border: 2px solid #ddd;
     box-shadow: 2px 2px 10px 2px black
+}
+.client-info{
+    margin-top: 2vh;
 }
 
 .cantidad_pedida{
@@ -241,10 +248,18 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 
-/* .payment-type{
+ .payment-type{
+     margin: 1vh;
     border-radius: 30px;
     border: 2px solid #ddd;
-} */
+    box-shadow: 2px 2px 10px 2px black;
+}
+ .payment-type input{
+     display: none;
+ }
+ .payment-type:hover{
+     box-shadow: 2px 2px 10px 2px white;
+ }
 
 .total{
     background: rgba(57, 48, 48, 0.4);
@@ -272,6 +287,11 @@ input[type=number]::-webkit-outer-spin-button {
     box-shadow: 2px 2px 10px 2px black;
     border: 2px solid white;
 }
+.btn-continue:hover{
+    color: white;
+    font-weight: bold;
+    box-shadow:2px 2px 10px 2px white;
+}
 .btn-edit{
     text-transform: uppercase;
     color: white;
@@ -291,6 +311,9 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 3em;
 }
 
+.alert-success{
+}
+
 .modificar_pedido{
     margin-bottom: 2em;
 }
@@ -304,10 +327,10 @@ input[type=number]::-webkit-outer-spin-button {
 
 .footer {
     background-color: white;
+    color: #2d3748;
     margin-top: 2vh; /* negative value of footer height */
     height: 5vh;
     width: 100%;
-    padding-top:20px;
 }
 
 
