--- a/public/css/app.css
+++ b/public/css/app.css
@@ -18,8 +18,11 @@ html, body {
 body{
     font-family: 'Abhaya Libre', serif;
     color: white;
-    /* background-image: url("../images/pattern_extended.png"); */
-    background: linear-gradient(to right, #c04848, #480048);
+    /*background-image: url("../images/pattern_extended.png");*/
+    /*background: linear-gradient(to right, #c04848, #480048);*/
+    /*background: linear-gradient(to right top, #11998e, #38ef7d)*/;
+    background: linear-gradient(to right top, #34e89e, #0f3443);
+    /*background: linear-gradient(to top, #00f260, #0575e6);*/
     background-repeat: repeat;
     background-attachment: fixed;
 }
@@ -111,7 +114,7 @@ div.central{
 .product{
     margin: 10px 10px;
     padding: 10px;
-    background: rgba(107, 211, 210, 0.11);
+    background: rgba(15, 60, 60, 0.38);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(15px);
     border: 2px solid gray;
@@ -190,8 +193,8 @@ input[type=number]::-webkit-outer-spin-button {
     background: rgba(57, 48, 48, 0.4);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    border: 2px dashed #ddd;
-    border-radius: 30px;
+    border: 2px solid #ddd;
+    border-radius: 15px;
     box-shadow: 2px 2px 10px 2px black;
     margin: 10vh 3vh;
     padding-top: 10px;
@@ -212,17 +215,18 @@ input[type=number]::-webkit-outer-spin-button {
 
 .table{
     font-size: 2.5vh;
-    background: rgba(57, 48, 48, 0.4);
+    background: rgba(20, 26, 20, 0.31);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    border: 2px solid #ddd;
-    box-shadow: 2px 2px 10px 2px black
+    border-radius: 10px;
+    box-shadow: -1px 1px 11px 1px black
 }
 .payment-info{
+    font-size: 2.5vh;
     background: rgba(57, 48, 48, 0.4);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    border-radius: 30px;
+    border-radius: 10px;
     margin: 2vh;
     padding-top: 2vh;
     border: 2px solid #ddd;
@@ -231,53 +235,27 @@ input[type=number]::-webkit-outer-spin-button {
 .client-info{
     margin-top: 2vh;
 }
-
-.cantidad_pedida{
-    font-size: 4vw;
-    height: 20px;
-    width: 3em;
-    margin-left: 3em;
-    font-weight: 600;
-    border: none;
-    color: #05386B;
-    background-color: transparent;
-    text-align:center;
-    height: 100%;
+/*input[type="radio"]{
+    display: none;
+}*/
+.payment-type{
+    margin: 1vh;
 }
-
-
-
-
- .payment-type{
-     margin: 1vh;
-    border-radius: 30px;
-    border: 2px solid #ddd;
-    box-shadow: 2px 2px 10px 2px black;
-}
- .payment-type input{
-     display: none;
- }
- .payment-type:hover{
-     box-shadow: 2px 2px 10px 2px white;
+ input[type="radio"]:checked{
+     box-shadow: 0px 0px 11px 8px #f4efef52;
  }
 
 .total{
-    background: rgba(57, 48, 48, 0.4);
+    background: rgba(20, 26, 20, 0.31);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
-    border-radius: 30px;
+    border-radius: 10px;
     border: 2px solid #ddd;
     margin: 2vh;
     padding: 2vh;
     box-shadow: 2px 2px 10px 2px black
 }
 
-.totalvalor{
-    margin-top: -1.5vw;
-    width: 30vw;
-    border: none;
-    color: #05386B;
-}
 .btn-continue{
     text-transform: uppercase;
     color: white;
@@ -304,8 +282,8 @@ input[type=number]::-webkit-outer-spin-button {
 .btn-confirm{
     text-transform: uppercase;
     color: white;
-//    background: rgba(33, 213, 69);
-    border-radius: 30px;
+    background: rgba(33, 213, 69);
+    border-radius: 10px;
     box-shadow: 2px 2px 10px 2px black;
     border: 2px solid white;
     margin: 3em;
@@ -339,150 +317,11 @@ input[type=number]::-webkit-outer-spin-button {
 
 
 /*A D M I N I S T R A C I O N*/
-.admin{
-    background: rgba(57, 48, 48, 0);
-    -webkit-backdrop-filter: blur(10px);
-    backdrop-filter: blur(10px);
-    color: white;
-    padding: 2vh;
-    border-radius: 15px;
-    box-shadow: 2px 2px 10px 2px black;
-}
-.admin-login{
-    margin: 20px 0px;
-}
-/*A G R E G A R   P R O D U C T O S */
 
-.agregar.agregar_producto{
-    min-height: 600px;
-    margin-top: -15vw;
-}
-.datos{
-    padding-top: 8%;
-    border-radius: 30px;
-    margin: 30px 3px;
-    box-shadow: 0px 0px 5px #05386B;
-    background: #f2f7f7;
-}
-.agregar.agregar_producto h2{
-    text-transform: uppercase;
-    text-shadow: 2px 2px #5CDB95;
-}
-.agregar_nombre{
-    margin-bottom: 3vw;
-}
-.agregar_nombre input{
-    width: 30vw;
-}
-.agregar_categoria{
-    margin-bottom: 9vw;
-}
-.agregar_unidad{
-    margin-bottom: 9vw;
-}
-.agregar_precio{
-    margin-bottom: 3vw;
-}
-.agregar_precio input{
-    width: 30vw;
-}
-.agregar_stock{
-    margin-bottom: 3vw;
-}
-.bottom.agregar{
-    margin-top: 8vw;
-    font-size: 5vw;
-    border-radius: 30px;
-    height: 9vw;
-    color: #05386B;
-    box-shadow: 0px 0px 5px #05386B;
-}
-
-/* M O D I F I C A R   P R O D U C T O S */
-
-section.modificar{
-    margin-bottom: 8%;
-
-}
-
-
-#modificacion_producto{
-    padding-top: 8%;
-    border-radius: 30px;
-    box-shadow: 0px 0px 5px #05386B;
-    margin: 10px 4px;
-    background: #f2f7f7;
-}
-
-/*  L I S T A   D E   P E D I D O S   */
-
-.lista-pedidos{
-    color:white;
-}
-.tabla-pedidos{
-    color:white;
-    font-size: 2vh;
-
-}
 
 /* L I S T A   D E   CO M P R A S  */
 
-input[type="date"]{
-    background-color: transparent;
-    width: 20vw;
-    font-size: 4vw !important;
 
-}
-.but_compras{
-    transform: translateY(-360%);
-}
-.fechas{
-    transform: translateY(-100%);
-}
-.fechasPedidos{
-    transform: translateY(150%);
-}
-
-
-#boton2{
-    transform: translateY(-150%);
-    margin-top: -5em;
-    width: 20vw;
-}
-#boton{
-    transform: translateY(440%);
-    margin-top: -5em;
-    width: 20vw;
-}
-
-.desc-compras1 input{
-    font-weight: 600;
-    font-size: 4vw;
-    color: #05386B;
-    background: transparent;
-    border:none;
-}
-.titulos input {
-    color: #05386B;
-    /* text-decoration: underline; */
-    text-transform: uppercase;
-    background: transparent;
-    border: none;
-    font-size: 5vw;
-    margin-right: 2vw;
-}
-.lista_cantidad, #cantidad{
-    margin-left: 6vw;
-}
-
-.imprimir{
-    margin-top: 8vw;
-    font-size: 3vw;
-    border-radius: 30px;
-    height: 9vw;
-    color: #05386B;
-    box-shadow: 0px 0px 5px #05386B;
-}
 
 @media only screen
 and (min-device-width: 500px)
@@ -678,35 +517,5 @@ and (-webkit-min-device-pixel-ratio: 1) {
         height: 10px !important;
     }
 
-
-    /*  L I S T A   D E   P E D I D O S   */
-    .pedidos1 hr{
-        height: 2px;
-        box-shadow: 0px 0px 5px #ccc;
-    }
-    .lista_pedidos1 h2{
-        text-transform: uppercase;
-        text-shadow: 2px 2px #5CDB95;
-        color: #05386B;
-        margin-top: -15px;
-    }
-    .lista_pedidos1{
-        margin-top: 10px;
-        /* box-shadow: 0px 0px 2px #05386B; */
-    }
-    .cliente_pedido1 input{
-
-        font-size: 4vw;
-    }
-    .lista_pedido1{
-        padding-top: 10px;
-        border-radius: 30px;
-        background: #5CDB95 ;
-    }
-
-    .total1{
-        color: #05386B;
-        font-size: 4vw;
-    }
 
 }
