--- a/resources/css/app.css
+++ b/resources/css/app.css
@@ -224,6 +224,7 @@ input[type=number]::-webkit-outer-spin-button {
     border: 2px solid #ddd;
     box-shadow: 2px 2px 10px 2px black
 }
+
 .payment-info{
     background: rgba(57, 48, 48, 0.4);
     -webkit-backdrop-filter: blur(10px);
@@ -280,6 +281,12 @@ input[type=number]::-webkit-outer-spin-button {
     margin: 2vh;
     box-shadow: 2px 2px 10px 2px black;
     border: 2px solid white;
+}
+.btn-orders{
+    margin-top: 2vh;
+    border: 2px solid grey;
+    border-radius: 5px;
+    background: rgba(201, 203, 204, 0.54);
 }
 .btn-edit{
     text-transform: uppercase;
