--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,9 +21,9 @@ body{
     font-family: 'Ubuntu', sans-serif;
     color: white;
     /*background-image: url("../images/pattern_extended.png");*/
-    /*background: linear-gradient(to right, #c04848, #480048);*/
-    /*background: linear-gradient(to right top, #11998e, #38ef7d)*/;
-    background: linear-gradient(to right top, #34e89e, #0f3443);
+    background: linear-gradient(to right, #c04848, #480048);
+    /* background: linear-gradient(to right top, #11998e, #38ef7d); */
+    /* background: linear-gradient(to right top, #34e89e, #0f3443); */
     /*background: linear-gradient(to top, #00f260, #0575e6);*/
     background-repeat: repeat;
     background-attachment: fixed;
@@ -113,6 +113,11 @@ div.central{
 }
 
 /*P R O D U C T O S*/
+
+.categories{
+    background: rgba(20, 26, 20, 0.31);
+    border-radius: 10px;
+}
 .product{
     margin: 10px 10px;
     padding: 10px;
@@ -163,16 +168,16 @@ input[type=number]::-webkit-outer-spin-button {
     z-index: 9999;
     cursor: pointer;
 }
-.btn_order{
-    border-radius: 30px;
+.btn-order{
     height: 6vh;
+    color: white !important;
+    background: #45926c !important;
     box-shadow: 2px 1px 20px 5px black;
     width: auto;
     font-size: 2.5vh;
     font-weight: 600;
     margin-top: 10px;
     margin-bottom: 10px;
-//    display: scroll;
 }
 .confirmacion{
     color:white;
@@ -276,6 +281,9 @@ input[type=number]::-webkit-outer-spin-button {
 }
 .dropdown-menu{
     background: rgba(255, 255, 255, 0.17) !important
+}
+.btn-category:hover{
+    box-shadow: inset 2px 2px 10px 2px #ffffff78;
 }
 .btn-edit{
     color: black;
