--- a/public/css/app.css
+++ b/public/css/app.css
@@ -21,9 +21,9 @@ body{
     font-family: 'Ubuntu', sans-serif;
     color: white;
     /*background-image: url("../images/pattern_extended.png");*/
-    background: linear-gradient(to right, #c04848, #480048);
+    /* background: linear-gradient(to right, #c04848, #480048); */
     /* background: linear-gradient(to right top, #11998e, #38ef7d); */
-    /* background: linear-gradient(to right top, #34e89e, #0f3443); */
+    background: linear-gradient(to right top, #34e89e, #0f3443);
     /*background: linear-gradient(to top, #00f260, #0575e6);*/
     background-repeat: repeat;
     background-attachment: fixed;
@@ -115,7 +115,7 @@ div.central{
 /*P R O D U C T O S*/
 
 .categories{
-    background: rgba(20, 26, 20, 0.31);
+    background: rgba(57, 48, 48, 0.4);
     border-radius: 10px;
 }
 .product{
@@ -129,7 +129,14 @@ div.central{
     box-shadow: 2px 1px 20px 5px black;
 }
 
+/* P R O M O T I O N */
 
+.products-details{
+    background: rgba(15, 60, 60, 0.38);
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(15px);
+    border-radius: 15px;
+}
 
 .product-image img{
     height: 140px;
@@ -215,6 +222,14 @@ input[type=number]::-webkit-outer-spin-button {
     background: rgba(255, 255, 255, 0.8);
     -webkit-backdrop-filter: blur(10px);
     backdrop-filter: blur(10px);
+}
+
+.card-body{
+    background: rgba(57, 48, 48, 0.4);
+    box-shadow: 2px 2px 10px 2px black;
+
+    border-radius: 15px;
+
 }
 
 
