--- a/public/css/app.css
+++ b/public/css/app.css
@@ -137,6 +137,12 @@ div.central{
     backdrop-filter: blur(15px);
     border-radius: 15px;
 }
+.modal-content{
+    background:rgba(18, 74, 58, 0.46) !important;
+    -webkit-backdrop-filter: blur(10px);
+    backdrop-filter: blur(15px);
+    box-shadow: 0px 0px 20px 13px black;
+}
 
 .product-image img{
     height: 140px;
