--- a/public/css/app.css
+++ b/public/css/app.css
@@ -263,6 +263,10 @@ input[type=number]::-webkit-outer-spin-button {
 .client-info{
     margin-top: 2vh;
 }
+.client-info2{
+  background: rgba(20, 26, 20, 0.31);
+  border-radius: 10px;
+}
 /*input[type="radio"]{
     display: none;
 }*/
